fix: fixed version support and passive effects